--- a/seata/docker-compose.yaml
+++ b/seata/docker-compose.yaml
@@ -2,7 +2,9 @@ version: "3.1"
 services:
   seata-server:
     image: seataio/seata-server:latest
+    container_name: seata-server
     hostname: seata-server
+    restart: always
     ports:
       - 8091:8091
     environment:
