--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -12,10 +12,14 @@ services:
   kafka:
     image: wurstmeister/kafka
     container_name: kafka
+    depends_on:
+      - zookeeper
+    links:
+      - zookeeper:zk
     ports:
       - 9092:9092
     environment:
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ZOOKEEPER_CONNECT=zk:2181
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${IP}:9092
       - KAFKA_LISTENERS=PLAINTEXT://:9092
       - KAFKA_ADVERTISED_PORT=9092
@@ -28,12 +32,4 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./kafka/data:/kafka
-    restart: always
-  kafka-manager:  
-    image: kafkamanager/kafka-manager
-    container_name: kafka-manager
-    environment:
-        ZK_HOSTS: 192.168.3.20
-    ports:  
-      - 9001:9000
     restart: always
