--- a/jenkins/docker-compose.yaml
+++ b/jenkins/docker-compose.yaml
@@ -1,14 +1,17 @@
 version: '3'
 services:
   jenkins:
-   image: jenkins/jenkins:lts
+   image: jenkinsci/blueocean
    container_name: jenkins
+   user: root
+   privileged: true
    restart: always
    environment:
     - 'JAVA_OPTS=-Duser.timezone=Asia/Shanghai'
    volumes:
     - /etc/localtime:/etc/localtime
-    - ./jenkins_home:/var/jenkins_home
+    - ./data:/var/jenkins_home
+    - /var/run/docker.sock:/var/run/docker.sock
    ports:
     - 8761:8080
     - 50000:50000
