--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -33,3 +33,17 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./kafka/data:/kafka
     restart: always
+  kafka-manager-web:
+    image: registry.cn-hangzhou.aliyuncs.com/sparkzxl/kafka-manager-web:2.3.0
+    container_name: kafka-manager-web
+    depends_on:
+      - kafka
+    restart: always
+    environment:
+      MYSQL_SERVICE_HOST: sparkzxl.mysql.rds.aliyuncs.com
+      MYSQL_SERVICE_PORT: 3306
+      MYSQL_SERVICE_USER: zhouxinlei
+      MYSQL_SERVICE_PASSWORD: Zxl298828
+      MYSQL_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
+    ports:
+      - 8701:8080
