--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -15,23 +15,23 @@ services:
     depends_on:
       - zookeeper
     links:
-      - zookeeper:zk
-    ports:
-      - 9092:9092
+      - zookeeper
     environment:
-      - KAFKA_ZOOKEEPER_CONNECT=zk:2181
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${IP}:9092
-      - KAFKA_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_ADVERTISED_PORT=9092
-      - KAFKA_LOG_RETENTION_HOURS=120
-      - KAFKA_MESSAGE_MAX_BYTES=10000000
-      - KAFKA_REPLICA_FETCH_MAX_BYTES=10000000
-      - KAFKA_GROUP_MAX_SESSION_TIMEOUT_MS=60000
-      - KAFKA_NUM_PARTITIONS=3
-      - KAFKA_DELETE_RETENTION_MS=1000
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://192.168.3.14:9092
+      KAFKA_LISTENERS: PLAINTEXT://:9092
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_LOG_RETENTION_HOURS: 120
+      KAFKA_MESSAGE_MAX_BYTES: 10000000
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 10000000
+      KAFKA_GROUP_MAX_SESSION_TIMEOUT_MS: 60000
+      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_DELETE_RETENTION_MS: 1000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./kafka/data:/kafka
+    ports:
+      - 9092:9092
     restart: always
   kafka-manager-web:
     image: registry.cn-hangzhou.aliyuncs.com/sparkzxl/kafka-manager-web:2.3.0
